# WhereToGo

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.3348FB7E6150DCA7.idx  main.cpp.B293CDACA6F106E4.idx
assets/map/: Dungeon.tmx  desert.json  desert.tmx  dungeon.tmj  dungeon.tmx  dungeon.tsx  未命名.tiled-session
include/: EventHandle.hpp  Game.hpp  ParticleSystem.hpp  Renderer.hpp  ShaderManager.hpp  anim-sprite.hpp  cam.hpp  ecs.hpp  entity.hpp  esc.hpp  map.hpp  mover.hpp  player.hpp  types.hpp  utils.hpp
resources/: fs_spotlight.glsl  spotlight.fs
src/: EventHandle.cc  Game.cc  ParticleSystem.cc  Renderer.cc  ShaderManager.cc  anim-spirte.cc  anim-sprite.cc  cam.cc  ecs.cc  esc.cc  main.cc  map.cc  mover.cc  player.cc
